--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.17.3'
-          otp-version: '27.1'
+          elixir-version: '1.20.0-rc.1'
+          otp-version: '28.3.1'
 
       - name: Restore dependencies cache
         uses: actions/cache@v3
@@ -43,13 +43,6 @@ jobs:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
-
-      - name: Restore Dialyzer PLT cache
-        uses: actions/cache@v3
-        with:
-          path: _build/dev/*.plt
-          key: ${{ runner.os }}-dialyzer-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ runner.os }}-dialyzer-
 
       - name: Install dependencies
         run: mix deps.get
@@ -62,9 +55,6 @@ jobs:
 
       - name: Check formatting
         run: mix format --check-formatted
-
-      - name: Run Dialyzer
-        run: mix dialyzer --format github
 
       - name: Run tests
         env:
